Bug 1022259 - Only load Gtk+2 stub for plugin processes in Gtk+3 builds. r=bent,r=karlt