ipc/glue/GeckoChildProcessHost.cpp
@@ -576,17 +576,19 @@ GeckoChildProcessHost::PerformAsyncLaunchInternal(std::vector<std::string>& aExt
       }
 
 #  if (MOZ_WIDGET_GTK == 3)
-      const char *ld_preload = PR_GetEnv("LD_PRELOAD");
-      nsCString new_ld_preload;
+      if (mProcessType == GeckoProcessType_Plugin) {
+          const char *ld_preload = PR_GetEnv("LD_PRELOAD");
+          nsCString new_ld_preload;
 
-      new_ld_preload.Assign(path.get());
-      new_ld_preload.AppendLiteral("/" DLL_PREFIX "mozgtk2" DLL_SUFFIX);
+          new_ld_preload.Assign(path.get());
+          new_ld_preload.AppendLiteral("/" DLL_PREFIX "mozgtk2" DLL_SUFFIX);
 
-      if (ld_preload && *ld_preload) {
-          new_ld_preload.AppendLiteral(":");
-          new_ld_preload.Append(ld_preload);
+          if (ld_preload && *ld_preload) {
+              new_ld_preload.AppendLiteral(":");
+              new_ld_preload.Append(ld_preload);
+          }
+          newEnvVars["LD_PRELOAD"] = new_ld_preload.get();
       }
-      newEnvVars["LD_PRELOAD"] = new_ld_preload.get();
 #  endif // MOZ_WIDGET_GTK
 
 
